Add filter by tender_id for risks list API
